--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "spatie/laravel-permission": "^6.20"
+        "spatie/laravel-permission": "^6.20",
+        "stancl/tenancy": "^3.9",
+        "tomatophp/filament-simple-theme": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
