--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
         "php": "^8.2",
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.3",
+        "jenssegers/mongodb": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "mongodb/laravel-mongodb": "^5.4",
+        "mongodb/mongodb": "^1.21",
         "spatie/laravel-permission": "^6.20",
         "stancl/tenancy": "^3.9",
         "tomatophp/filament-simple-theme": "^1.0"
