--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,12 @@
         "livewire/livewire": "^3.6",
         "mongodb/laravel-mongodb": "^5.4",
         "mongodb/mongodb": "^1.21",
+        "rmsramos/activitylog": "^1.0",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.20",
         "stancl/tenancy": "^3.9",
-        "tomatophp/filament-simple-theme": "^1.0"
+        "tomatophp/filament-simple-theme": "^1.0",
+        "z3d0x/filament-logger": "^0.8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
